# spotify-to-musi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
spotify_to_musi/: __init__.py  __main__.py  cache.py  commons.py  exceptions.py  main.old.py  main.py  musi.py  oauth.py  paths.py  spotify.py  tracks_cache.py  youtube.py  ytmusic.py
spotify_to_musi/test/: datatypes.py  ytmusic.py
spotify_to_musi/typings/: core.py  general.py  musi.py  spotify.py  youtube.py
tests/: __init__.py  test_transfer.py
typehints/: general.py  musi.py  spotify.py  youtube.py
typings/: general.py  spotify.py
